# git_bindings

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  git.c
android/src/main/java/com/example/git_bindings/: GitBindingsPlugin.java
android/src/main/java/io/gitjournal/git_bindings/: AnyThreadResult.java  GenerateSSHKeysTask.java  Git.java  GitAddTask.java  GitBindingsPlugin.java  GitCloneTask.java  GitCommitTask.java  GitDefaultBranchTask.java  GitFetchTask.java  GitInitTask.java  GitMergeTask.java  GitPullTask.java  GitPushTask.java  GitResetLastTask.java  GitRmTask.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/git_bindings_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: gitapp.dart  main.dart
example/test/: widget_test.dart
gj_common/: CMakeLists.txt  Dockerfile  Makefile  common.c  gitjournal.c  gitjournal.h  test.c  todo
ios/: git_bindings.podspec
ios/Classes/: GitBindingsPlugin.h  GitBindingsPlugin.m
lib/: git.dart  git_bindings.dart
test/: git_bindings_test.dart
